--- a/stock_inspector/templates/map.html
+++ b/stock_inspector/templates/map.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Stock Inspector</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
