--- a/stock_inspector/templates/header.html
+++ b/stock_inspector/templates/header.html
@@ -7,25 +7,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">  
       <ul class="navbar-nav mr-auto"> 
         <li class="nav-item">
-          <a class="nav-link text-success" href="/">Home</a>
+          <a class="nav-link text-info" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="/fundamental">Fundamental</a>
+          <a class="nav-link text-info" href="/fundamental">Fundamental</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="/technical">Technical</a>
+          <a class="nav-link text-info" href="/technical">Technical</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="/environmental">Environmental</a>
+          <a class="nav-link text-info" href="/environmental">Environmental</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="/map">Map</a>
+          <a class="nav-link text-info" href="/map">Map</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="/api">APIs</a>
+          <a class="nav-link text-info" href="/api">APIs</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="/about">About</a>
+          <a class="nav-link text-info" href="/about">About</a>
         </li>
       </ul>
     </div>
